fix: code cleanup & fix covered hide button

--- a/web-app/style.css
+++ b/web-app/style.css
@@ -216,10 +216,8 @@
 
 #control-panel {
     position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
+    bottom: 50px;
+    top: 50px;
     width: 100%;
     display: flex;
     justify-content: space-between;
